--- a/EndecaCartridge_CRS.html
+++ b/EndecaCartridge_CRS.html
@@ -218,9 +218,7 @@ Hello-World=/atg/endeca/assembler/cartridge/handler/HelloWorld
       <ul class="side-nav">
         <li><a href="http://technoon.github.io/lessons/index.html">Node & MongoDB</a></li>
         <li><a href="http://technoon.github.io/lessons/arduino.html">Arduino Microcontroller</a></li>
-        <li><a href="#">Foundation Response Web Design</a></li>
-        <li><a href="#">Knockout JS</a></li>
-        <li><a href="#">Rasberry Pi</a></li>
+        <li><a href="http://technoon.github.io/lessons/arduino.html">Endeca Cartridge & ATG CRS</a></li>
       </ul>
  
       <div class="panel">
