--- a/EndecaCartridge_CRS.html
+++ b/EndecaCartridge_CRS.html
@@ -222,7 +222,7 @@ Hello-World=/atg/endeca/assembler/cartridge/handler/HelloWorld
       </ul>
  
       <div class="panel">
-        <h5>Check my mongoDB Tutorials</h5>
+        <h5>Check MongoDB Tutorials</h5>
         <p></p>
         <a href="http://technoon.github.io/lessons/index.html">Read More →</a>
       </div>
