--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <div class="large-12 columns">
       <div class="nav-bar right">
        <ul class="button-group">
-         <li><a href="#" class="button">Home</a></li>
-         <li><a href="in.linkedin.com/in/vrkrajesh/" class="button">About me</a></li>
+         <li><a href="#" class="small button">Home</a></li>
+         <li><a href="in.linkedin.com/in/vrkrajesh/" class="small button">About me</a></li>
         </ul>
       </div>
       <h1>Technoon <small>Tutorials <br>Node & MongoDB using Mongoose </small></h1>
@@ -278,6 +278,7 @@ function renderResult(res, prds, msg) {
       <ul class="side-nav">
         <li><a href="http://technoon.github.io/lessons/index.html">Node & MongoDB</a></li>
         <li><a href="http://technoon.github.io/lessons/arduino.html">Arduino Microcontroller</a></li>
+        <li><a href="http://technoon.github.io/lessons/EndecaCartridge_CRS">ATG CRS & Endeca Cartridge</a></li>
         <li><a href="#">Foundation Response Web Design</a></li>
         <li><a href="#">Knockout JS</a></li>
         <li><a href="#">Rasberry Pi</a></li>
