--- a/EndecaCartridge_CRS.html
+++ b/EndecaCartridge_CRS.html
@@ -219,6 +219,8 @@ Hello-World=/atg/endeca/assembler/cartridge/handler/HelloWorld
         <li><a href="http://technoon.github.io/lessons/index.html">Node & MongoDB</a></li>
         <li><a href="http://technoon.github.io/lessons/arduino.html">Arduino Microcontroller</a></li>
         <li><a href="http://technoon.github.io/lessons/arduino.html">Endeca Cartridge & ATG CRS</a></li>
+        <li><a href="#">Knockout JS</a></li>
+        <li><a href="#">Rasberry Pi</a></li>
       </ul>
  
       <div class="panel">
