--- a/EndecaCartridge_CRS.html
+++ b/EndecaCartridge_CRS.html
@@ -216,9 +216,9 @@ Hello-World=/atg/endeca/assembler/cartridge/handler/HelloWorld
  
       <h5>Rajesh's Writings : </h5>
       <ul class="side-nav">
-        <li><a href="http://technoon.github.io/lessons/index.html">Node & MongoDB</a></li>
-        <li><a href="http://technoon.github.io/lessons/arduino.html">Arduino Microcontroller</a></li>
-        <li><a href="http://technoon.github.io/lessons/arduino.html">Endeca Cartridge & ATG CRS</a></li>
+        <li><a href="http://technoon.github.io/lessons">Node & MongoDB</a></li>
+        <li><a href="http://technoon.github.io/lessons/arduino">Arduino Microcontroller</a></li>
+        <li><a href="http://technoon.github.io/lessons/EndecaCartridge_CRS">ATG CRS & Endeca Cartridge</a></li>
         <li><a href="#">Knockout JS</a></li>
         <li><a href="#">Rasberry Pi</a></li>
       </ul>
@@ -245,7 +245,7 @@ Hello-World=/atg/endeca/assembler/cartridge/handler/HelloWorld
         </div>
         <div class="large-6 columns">
           <ul class="inline-list right">
-            <li><a href="#">Home</a></li>
+            <li><a href="http://technoon.github.io/lessons">Home</a></li>
             <li><a href="in.linkedin.com/in/vrkrajesh/">About me</a></li>
           </ul>
         </div>
