--- a/index.html
+++ b/index.html
@@ -276,17 +276,16 @@ function renderResult(res, prds, msg) {
  
       <h5>Rajesh's Writings : </h5>
       <ul class="side-nav">
-        <li><a href="http://technoon.github.io/lessons/index.html">Node & MongoDB</a></li>
-        <li><a href="http://technoon.github.io/lessons/arduino.html">Arduino Microcontroller</a></li>
+        <li><a href="http://technoon.github.io/lessons">Node & MongoDB</a></li>
+        <li><a href="http://technoon.github.io/lessons/arduino">Arduino Microcontroller</a></li>
         <li><a href="http://technoon.github.io/lessons/EndecaCartridge_CRS">ATG CRS & Endeca Cartridge</a></li>       
         <li><a href="#">Knockout JS</a></li>
         <li><a href="#">Rasberry Pi</a></li>
       </ul>
  
       <div class="panel">
-        <h5>Featured</h5>
-        <p>Arduino is an open-source electronics platform that can acknowledge and interact with its environment through a variety of sensor types.</p>
-        <a href="http://technoon.github.io/lessons/arduino.html">Read More →</a>
+        <h5>Check Arduino Tutorial</h5>     
+        <a href="http://technoon.github.io/lessons">Read More →</a>
       </div>
  
     </aside>
@@ -305,8 +304,8 @@ function renderResult(res, prds, msg) {
         </div>
         <div class="large-6 columns">
           <ul class="inline-list right">
-            <li><a href="#">Home</a></li>
-            <li><a href="in.linkedin.com/in/vrkrajesh/">About me</a></li>
+            <li><a href="http://technoon.github.io/lessons">Home</a></li>
+            <li><a href="http://www.linkedin.com/in/vrkrajesh/">About me</a></li>
           </ul>
         </div>
       </div>
