--- a/arduino.html
+++ b/arduino.html
@@ -1,38 +1,55 @@
-<!DOCTYPE html>
-<html>
+
+<!doctype html>
+<html class="no-js" lang="en">
   <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Tech-noon : Technical Noons" />
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-    <title>Technoon Tutorial - Arduino </title>
+    <meta name="keywords" content="Arduino">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Technoon Tutorial - Arduino</title>
+    <link rel="stylesheet" href="css/foundation.css" />
+    <script src="js/vendor/modernizr.js"></script>
   </head>
-
   <body>
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <h1 id="project_title">Technoon Tutorial</h1>
-          <h2 id="project_tagline">Arduino MicroController</h2>
-		</header>
 
-  <table align="left">
-    <tr><td style="font-family:comicsansms;font-size:15px;"><b><br>Tutorials : <br></b></td></tr>
-    <tr><td style="font-family:comicsansms;font-size:15px;"><a href="http://technoon.github.io/lessons/arduino.html"> Arduino MicroController</a></td></tr>
-    <tr><td style="font-family:comicsansms;font-size:15px;"><a href="http://technoon.github.io/lessons/index.html"> Node & MongoDB</a></td></tr>
-  </table>
-  
-</div>
+  <div class="row">
+    <div class="large-12 columns">
+      <div class="nav-bar right">
+       <ul class="button-group">
+         <li><a href="http://technoon.github.io/lessons/" class="small button">Home</a></li>
+         <li><a href="http://linkedin.com/in/vrkrajesh/" class="small button">About me</a></li>
+        </ul>
+      </div>
+      <h1>Technoon <small>Tutorials <br> Arduino MicroController</small></h1>
+      <hr />
+    </div>
+  </div>
 
-<!-- MAIN CONTENT -->
-<div id="main_content_wrap" class="outer">
-<section id="main_content" class="inner">
-<h3><a name="section1" class="anchor" href="#section1"><span class="octicon octicon-link"></span></a>Welcome to Technoon Tutorials</h3>
+
+<!-- Main Page Content and Sidebar -->
+ 
+<div class="row">
+
+<!-- Main Blog Content -->
+<div class="large-9 columns" role="content">
+ 
+<article>
+<h6>Written by <a href="#">Rajeshkumar Venkatesan</a> on Nov, 2013.</h6>
+
+<div class="row">
+<div class="large-6 columns">
+<h4><a href="#">Preface</a></h4>
 <p>Arduino is an open-source electronics platform that can acknowledge and interact with its environment through a variety of sensor types.  It’s great for hardware prototyping and one-off projects. Arduino is a tool for making computers that can sense and control more of the physical world than your desktop computer.
 There are many other microcontrollers and microcontroller platforms available for physical computing. Arduino stands top of those platforms. More details can be found in <a href="http://arduino.cc">arduino.cc</a>.
 </p>
+</div>
 
-<h3><a name="section2" class="anchor" href="#section2"><span class="octicon octicon-link"></span></a>PIN configuration in Ardunio Leonardo</h3>
+<div class="large-6 columns">
+<image src="http://technoon.github.io/lessons/images/ATG_CRS_Endeca.png"/>
+</div>
+</div>
+
+
+<h4><a name="section2" class="anchor" href="#section2"><span class="octicon octicon-link"></span></a>PIN configuration in Ardunio Leonardo</h4>
 <image src="https://f.cloud.github.com/assets/6375258/1993275/746c8bf8-84d6-11e3-823d-b3298a2af375.PNG"/>
 <p>
 <table border=0>
@@ -52,8 +69,9 @@ There are many other microcontrollers and microcontroller platforms available fo
 </table>
 </p>
 
+<br>
 
-<h3><a name="section3" class="anchor" href="#section3"><span class="octicon octicon-link"></span></a>How to program an Arduino ?</h3>
+<h4><a name="section3" class="anchor" href="#section3"><span class="octicon octicon-link"></span></a>How to program an Arduino ?</h4>
 <p>
 Arduino provides an software to write a sketch (software program using wiring language) and burn into the flash memory of the microcontroller board. There are quite few examples
 prepackaged in the sketch editor under the examples menu.  
@@ -63,7 +81,9 @@ prepackaged in the sketch editor under the examples menu.
 Using these program sketches, variety of sensors can be controlled and the output from these sensors can also be read.  
 </p>
 
-<h3><a name="section4" class="anchor" href="#section4"><span class="octicon octicon-link"></span></a>Reading a value from the Potentiometer (POT)</h3>
+<br>
+
+<h4><a name="section4" class="anchor" href="#section4"><span class="octicon octicon-link"></span></a>Reading a value from the Potentiometer (POT)</h4>
 <p>
 Let's see how can the output value from a potentiometer can be read and logged into serial monitor. <br>
 <font color="red">Required Accessories :  Arduino Uno / Leonardo, 10K POT, Bread board, 220 ohm resistor & Jumper wires </font><br><br>
@@ -71,9 +91,8 @@ Let's see how can the output value from a potentiometer can be read and logged i
 <font color="blue">Step 2:</font> Connect the potentiometer to the bread board.  Pot has 3 pins, ground, power & output.  Connect the ground pin to Arduino's ground pin, 
 power pin to 5V pin using 220 ohm resistor and output pin to the <font color="red">analog pin 2</font>. The wiring diagram is given below.<br>
 <font color="blue">Step 3:</font> Write a program sketch as below and upload it to Arduino board through USB<br>
-<font color="blue">Step 4:</font> Open the serial monitor from the menu and you will see the output values coming in from the POT.  Turn the pot knob to get different readings.<br>
+<font color="blue">Step 4:</font> Open the serial monitor from the menu and you will see the output values coming in from the POT.  Turn the pot knob to get different readings.
 <br>
-
 <code>
 Note: Using this incoming value from the POT, you can control the brightness of an LED or reduce the rotation 
 speed of a DC motor or control the direction of a SERVO motor. Options are plenty.
@@ -82,7 +101,7 @@ speed of a DC motor or control the direction of a SERVO motor. Options are plent
 
 <image src="http://technoon.github.io/lessons/images/Arduino_Wiring.PNG"/>
 
-<h3><a name="section5" class="anchor" href="#section5"><span class="octicon octicon-link"></span></a>Example code</h3>
+<h4><a name="section5" class="anchor" href="#section5"><span class="octicon octicon-link"></span></a>Example code</h4>
 <p>
 <pre><code>
 /*
@@ -104,18 +123,56 @@ speed of a DC motor or control the direction of a SERVO motor. Options are plent
 }
 </code></pre>
 <br>
-See you soon ! 
-</p>
 
-</section>
+
+<br>
+<p>Happy Coding !</p>
+</article>
 </div>
 
-<!-- FOOTER  -->
-<div id="footer_wrap" class="outer">
-<footer class="inner">
-	<p class="copyright"><font color="yellow">by Rajeshkumar Venkatesan</font></p>
-</footer>
-</div>
+<!-- End Main Content -->
+ 
+<!-- Sidebar -->
+    <aside class="large-3 columns">
+ 
+      <h5>Rajesh's Writings : </h5>
+      <ul class="side-nav">
+        <li><a href="http://technoon.github.io/lessons">Node & MongoDB</a></li>
+        <li><a href="http://technoon.github.io/lessons/arduino">Arduino Microcontroller</a></li>
+        <li><a href="http://technoon.github.io/lessons/EndecaCartridge_CRS">ATG CRS & Endeca Cartridge</a></li>
+        <li><a href="#">Knockout JS</a></li>
+        <li><a href="#">Rasberry Pi</a></li>
+      </ul>
+ 
+      <div class="panel">
+        <h5>Check ATG & Endeca Tutorials</h5>
+        <p></p>
+        <a href="http://technoon.github.io/lessons/EndecaCartridge_CRS">Read More →</a>
+      </div>
+ 
+    </aside>
+ 
+    <!-- End Sidebar -->
+  </div>
+ 
+  <!-- End Main Content and Sidebar -->
+  <!-- Footer -->
+  <footer class="row">
+    <div class="large-12 columns">
+      <hr />
+      <div class="row">
+        <div class="large-6 columns">
+          <p>© Rajeshkumar Venkatesan</p>
+        </div>
+        <div class="large-6 columns">
+          <ul class="inline-list right">
+               <li><a href="http://technoon.github.io/lessons/" class="small button">Home</a></li>
+               <li><a href="http://linkedin.com/in/vrkrajesh/" class="small button">About me</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </footer>
 
 <script type="text/javascript">
   var _gaq = _gaq || [];
@@ -127,10 +184,7 @@ See you soon !
     ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
   })();
-</script>
-</body>
+</script>    
+ 
+  </body>
 </html>
-
-
-
-
