--- a/arduino.html
+++ b/arduino.html
@@ -43,7 +43,7 @@ There are many other microcontrollers and microcontroller platforms available fo
 </div>
 
 <div class="large-6 columns">
-<image src="http://technoon.github.io/lessons/images/ATG_CRS_Endeca.png"/>
+<image src=""/>
 </div>
 </div>
 
@@ -85,14 +85,21 @@ Using these program sketches, variety of sensors can be controlled and the outpu
 <br>
 
 <h4><a href="#">Reading a value from the Potentiometer (POT)</a></h4>
+<p>
+Let's see how can the output value from a potentiometer can be read and logged into serial monitor.
+Required Accessories: Arduino Uno / Leonardo, 10K POT, Bread board, 220 ohm resistor & Jumper wires
+</p>
+
 <div class="panel">
 <pre>
-Let's see how can the output value from a potentiometer can be read and logged into serial monitor.
-<font color="red">Required Accessories :  Arduino Uno / Leonardo, 10K POT, Bread board, 220 ohm resistor & Jumper wires </font>
-<font color="blue">Step 1:</font> Connect the Arduino board to the computer thru USB
-<font color="blue">Step 2:</font> Connect the potentiometer to the bread board.  Pot has 3 pins, ground, power & output.  Connect the ground pin to Arduino's ground pin, power pin to 5V pin using 220 ohm resistor and output pin to the <font color="red">analog pin 2</font>. The wiring diagram is given below
-<font color="blue">Step 3:</font> Write a program sketch as below and upload it to Arduino board through USB
-<font color="blue">Step 4:</font> Open the serial monitor from the menu and you will see the output values coming in from the POT.  Turn the pot knob to get different readings.
+Step 1: Connect the Arduino board to the computer thru USB 
+Step 2: Connect the potentiometer to the bread board.  Pot has 3 pins, <br>
+ground, power & output.  Connect the ground pin to Arduino's ground pin, power pin to 5V pin <br>
+using 220 ohm resistor and output pin to the <font color="red">analog pin 2</font>. <br>
+The wiring diagram is given below
+Step 3: Write a program sketch as below and upload it to Arduino board through USB
+Step 4: Open the serial monitor from the menu and you will see the output values <br>
+coming in from the POT.  Turn the pot knob to get different readings.
 </pre>
 </div>
 
