--- a/arduino.html
+++ b/arduino.html
@@ -43,7 +43,7 @@ There are many other microcontrollers and microcontroller platforms available fo
 </div>
 
 <div class="large-6 columns">
-<image src=""/>
+<image src="http://technoon.github.io/lessons/images/Arduino_Logo.png"/>
 </div>
 </div>
 
