--- a/arduino.html
+++ b/arduino.html
@@ -48,7 +48,7 @@ There are many other microcontrollers and microcontroller platforms available fo
 </div>
 
 
-<h4><a href="#section2">PIN configuration in Ardunio Leonardo</a></h4>
+<h4><a href="#">PIN configuration in Ardunio Leonardo</a></h4>
 <image src="https://f.cloud.github.com/assets/6375258/1993275/746c8bf8-84d6-11e3-823d-b3298a2af375.PNG"/>
 <p>
 <table border=0>
@@ -93,13 +93,16 @@ Required Accessories: Arduino Uno / Leonardo, 10K POT, Bread board, 220 ohm resi
 <div class="panel">
 <pre>
 Step 1: Connect the Arduino board to the computer thru USB 
-Step 2: Connect the potentiometer to the bread board.  Pot has 3 pins, <br>
-ground, power & output.  Connect the ground pin to Arduino's ground pin, power pin to 5V pin <br>
-using 220 ohm resistor and output pin to the <font color="red">analog pin 2</font>. <br>
-The wiring diagram is given below
+
+Step 2: Connect the potentiometer to the bread board. Pot has 3 pins, ground, power & output.  
+Connect the ground pin to Arduino's ground pin, power pin to 5V pin using 220 ohm resistor 
+and output pin to the <font color="red">analog pin 2</font>.
+
 Step 3: Write a program sketch as below and upload it to Arduino board through USB
-Step 4: Open the serial monitor from the menu and you will see the output values <br>
+
+Step 4: Open the serial monitor from the menu and you will see the output values
 coming in from the POT.  Turn the pot knob to get different readings.
+
 </pre>
 </div>
 
