--- a/arduino.html
+++ b/arduino.html
@@ -78,7 +78,10 @@ prepackaged in the sketch editor under the examples menu.
 
 <p>
 <image src="https://f.cloud.github.com/assets/6375258/1992705/a72ed29e-84c7-11e3-9780-3289e8f2fdf4.PNG"/>
+</p>
+
 <br>
+<p>
 Using these program sketches, variety of sensors can be controlled and the output from these sensors can also be read.  
 </p>
 
@@ -94,9 +97,9 @@ Required Accessories: Arduino Uno / Leonardo, 10K POT, Bread board, 220 ohm resi
 <pre>
 Step 1: Connect the Arduino board to the computer thru USB 
 
-Step 2: Connect the potentiometer to the bread board. Pot has 3 pins, ground, power & output.  
-Connect the ground pin to Arduino's ground pin, power pin to 5V pin using 220 ohm resistor 
-and output pin to the <font color="red">analog pin 2</font>.
+Step 2: Connect the potentiometer to the bread board. Pot has 3 pins, ground, 
+power & output. Connect the ground pin to Arduino's ground pin, power pin to 
+5V pin using 220 ohm resistor and output pin to the <font color="red">analog pin 2</font>
 
 Step 3: Write a program sketch as below and upload it to Arduino board through USB
 
