--- a/EndecaCartridge_CRS.html
+++ b/EndecaCartridge_CRS.html
@@ -329,8 +329,8 @@ a HelloWorld.jsp. Copy this JSP into the browse folder in "store.war".  You may 
         </div>
         <div class="large-6 columns">
           <ul class="inline-list right">
-               <li><a href="http://technoon.github.io/lessons/" class="small button">Home</a></li>
-               <li><a href="http://linkedin.com/in/vrkrajesh/" class="small button">About me</a></li>
+               <li><a href="http://technoon.github.io/lessons">Home</a></li>
+               <li><a href="http://linkedin.com/in/vrkrajesh">About me</a></li>
           </ul>
         </div>
       </div>
