--- a/arduino.html
+++ b/arduino.html
@@ -183,8 +183,8 @@ speed of a DC motor or control the direction of a SERVO motor. Options are plent
         </div>
         <div class="large-6 columns">
           <ul class="inline-list right">
-               <li><a href="http://technoon.github.io/lessons/" class="small button">Home</a></li>
-               <li><a href="http://linkedin.com/in/vrkrajesh/" class="small button">About me</a></li>
+               <li><a href="http://technoon.github.io/lessons">Home</a></li>
+               <li><a href="http://linkedin.com/in/vrkrajesh">About me</a></li>
           </ul>
         </div>
       </div>
