--- a/drishticon.html
+++ b/drishticon.html
@@ -11,8 +11,8 @@
   <link rel="stylesheet" href="css/normalize.css" />
   <link rel="stylesheet" href="css/foundation.css" />
 
-  <script src="js/vendor/modernizr.js"></script>
-  <script src="js/vendor/jquery.js"></script>
+  <script src="http://technoon.github.io/lessons/js/vendor/modernizr.js"></script>
+  <script src="http://technoon.github.io/lessons/js/vendor/jquery.js"></script>
   
 
 </head>
