--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="nav-bar right">
        <ul class="button-group">
          <li><a href="#" class="small button">Home</a></li>
-         <li><a href="in.linkedin.com/in/vrkrajesh/" class="small button">About me</a></li>
+         <li><a href="http://linkedin.com/in/vrkrajesh/" class="small button">About me</a></li>
         </ul>
       </div>
       <h1>Technoon <small>Tutorials <br>Node & MongoDB using Mongoose </small></h1>
